--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Charlie's First Project</title>
+		<title>kale chips</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<h1>Charlie's Week 1 Project</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p> 
-
-		<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-
-		<p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p> 
-
-		<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h1>kale chips</h1>
+		<p>This is the online web store for world-renowned vegan snack shop, Kale Chips.</p> 
 	</body>
 </html>
