--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -6,6 +6,6 @@
 	</head>
 	<body>
 		<h1>kale chips</h1>
-		<p>This is the online web store for world-renowned vegan snack shop, Kale Chips.</p> 
+		<p>This is the web store for world-renowned vegan snack shop, Kale Chips.</p> 
 	</body>
 </html>
