added an h to section and adjusted margins

--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -53,7 +53,7 @@ refactor, each should have a class or id
 			<!-- <h2 id="slogan">I'm a web designer and front-end developer, creating meaningful online experiences.</h2> -->
 				<!-- <h3>Some of my latest work</h3> -->
 			<section class="about-me">
-				<h3>About Me</h3>
+				<h3>Charlie 101</h3>
 				<p>I enjoy solving problems and helping others using creative approaches to reach their goals. I start each day with a cup of coffee and a puzzle. I'm based in Chicago and love collaborating with those around me.</p>
 			</section>
 			<section class="column">
