design blocks, html blocks
created design block mockup in Boxy, updated HTML with semantic elements, updated CSS to display semantic elements, making content blocks visible

--- a/unit_5/index.html
+++ b/unit_5/index.html
@@ -15,11 +15,10 @@
 			</nav>
 		</header>
 
-		<!-- why is this a section and not.. something else -->
+		<!-- why is this a section and not a header? -->
 		<section class="heading">
 			<h1 class="header-text">Charlie Weber | Web Design</h1>
 			<h2 id="slogan">Web designer and front-end developer, creating meaningful online experiences.</h2> 
-			<img src="images/cw_webdesignhero.jpg" alt="Photo of Charlie Weber" title="Photo of Charlie Weber">
 		</section>
 
 		<main class="main-content">
@@ -27,7 +26,12 @@
 				<!-- <h3>Some of my latest work</h3> -->
 			<section class="about-me">
 				<h3>About Me</h3>
-				<p>I enjoy solving problems and helping others using creative approaches to reach their goals. I start each day with a cup of coffee and a puzzle. I'm based in Chicago and love collaborating with those around me.</p>
+				<aside>
+					<img src="images/cw_webdesignhero.jpg" alt="Photo of Charlie Weber" title="Photo of Charlie Weber">
+				</aside>
+				<article>
+					<p>I enjoy solving problems and helping others using creative approaches to reach their goals. I start each day with a cup of coffee and a puzzle. I'm based in Chicago and love collaborating with those around me.</p>
+				</article>
 			</section>
 			<section class="column">
 				<h4 class="project-title">Design Project</h4>
