--- a/unit_7/index.html
+++ b/unit_7/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Charlie Weber | Web Design</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header class="main-header">
