--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -3,31 +3,35 @@
 	<head>
 		<title>Charlie Weber | Web Design</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header class="main-header">
 			<nav>
-				<a href="#about" class="navlinks">About</a>
-				<a href="#portfolio" class="navlinks">Portfolio</a>
-				<a href="#" class="navlinks">Featured</a>
-				<a href="#footer" class="navlinks">Contact</a>
+				<div id="myDropdown" class="dropdown">
+					<a href="#about" class="navlinks">About</a>
+					<a href="#portfolio" class="navlinks">Portfolio</a>
+					<a href="#" class="navlinks">Featured</a>
+					<a href="#footer" class="navlinks">Contact</a>
+					<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+				</div>
 			</nav>
 		</header>
 
 		<!-- try adding a background image to this section -->
 		<section class="heading">
-			<h1 class="header-text">Charlie Weber | Web Design</h1>
+			<h1>Charlie Weber | Web Design</h1>
 			<h2 id="slogan">Web designer and front-end developer, creating meaningful online experiences.</h2> 
 			<ul class="social-links">
-				<li class="twitter">
-					<a href="https://twitter.com/charwebz" title="Follow me on Twitter" target="_blank">twitter</a>
+				<li>
+					<a href="https://twitter.com/charwebz" title="Follow me on Twitter" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
 				</li>
-				<li class="linkedin">
-					<a href="https://www.linkedin.com/in/webercharles/" title="Connect with me on LinkedIn" target="_blank">linkedin</a>
+				<li>
+					<a href="https://www.linkedin.com/in/webercharles/" title="Connect with me on LinkedIn" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
 				</li>
-				<li class="email">
-					<a href="mailto:weberscharles@gmail.com?subject=Web%20Design%20Inquiry" title="Send me an email">email</a>
+				<li>
+					<a href="mailto:weberscharles@gmail.com?subject=Web%20Design%20Inquiry" title="Send me an email"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
 				</li>
 			</ul>
 		</section>
@@ -44,25 +48,25 @@
 			</section>
 			<div class="column-wrapper clearfix" id="portfolio">
 				<h3>Portfolio</h3>
-				<section class="column">
-					<h4 class="project-title">Design Project</h4>
-					<img src="https://www.bigstockphoto.com/images/homepage/2016_bigstock_picks.jpg" alt="Photo of fingers with faces drawn on fingertips" title="Happy Fingers">
+				<section>
+					<h4>Design Project</h4>
+					<a href="#"><img src="https://www.bigstockphoto.com/images/homepage/2016_bigstock_picks.jpg" alt="Photo of fingers with faces drawn on fingertips" title="Happy Fingers"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. </p>
 				</section>
-				<section class="column">
-					<h4 class="project-title">Grocery List App</h4>
-					<img src="https://ak.picdn.net/assets/cms/21c3901c18b5824f76305971fcf2cf030f1a89e7-stock-vector-elephant-flat-icon-318716621.jpg" alt="Pink cartoon elephant" title="Pink cartoon elephant">
+				<section>
+					<h4>Grocery List App</h4>
+					<a href="#"><img src="https://ak.picdn.net/assets/cms/21c3901c18b5824f76305971fcf2cf030f1a89e7-stock-vector-elephant-flat-icon-318716621.jpg" alt="Pink cartoon elephant" title="Pink cartoon elephant"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 					consequat. </p>
 				</section>
-				<section class="column">
-					<h4 class="project-title">E-Commerce Project</h4>
-					<img src="https://g.foolcdn.com/editorial/images/245314/dice-1500_large.jpg" alt="Photo of dice being rolled" title="Photo of Dice">
+				<section>
+					<h4>E-Commerce Project</h4>
+					<a href="#"><img src="https://g.foolcdn.com/editorial/images/245314/dice-1500_large.jpg" alt="Photo of dice being rolled" title="Photo of Dice"></a>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -77,7 +81,7 @@
 			<h3>Let's get in touch!</h3>
 				<form  action="" method="">
 					<p><label>Name:</label>
-					<input type="text" name="name" maxlength="50" placeholder="your first & last name" /></p>
+					<input type="text" name="name" maxlength="50" placeholder="your first &amp; last name" /></p>
 					<p><label>Email:</label>
 					<input type="email" name="email" maxlength="50" placeholder="your email address" /></p>
 					<p><label>Message:</label>
@@ -86,6 +90,16 @@
 				</form>
 			</div>
 			<a href="#"><p>BACK TO TOP</p></a>
+			<script>
+			function myFunction() {
+			    var x = document.getElementById("myDropdown");
+			    if (x.className === "dropdown") {
+			        x.className += " responsive";
+			    } else {
+			        x.className = "dropdown";
+			    }
+			}
+			</script>
 		</footer>
 	</body>
 </html>
