adding html pages

--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -4,16 +4,18 @@
 		<title>Charlie Weber | Web Design</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
+		<link rel="shortcut icon" href="images/portfolio1favicon.png" type="image/png">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
 		<header class="main-header">
 			<nav>
 				<div id="myDropdown" class="dropdown">
-					<a href="#about" class="navlinks">About</a>
-					<a href="#portfolio" class="navlinks">Portfolio</a>
-					<a href="#" class="navlinks">Featured</a>
-					<a href="#footer" class="navlinks">Contact</a>
+					<a href="index.html">Home</a>
+					<a href="index.html#about">About</a>
+					<a href="index.html#portfolio">Portfolio</a>
+					<a href="blog.html">Blog</a>
+					<a href="contact.html">Contact</a>
 					<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
 			</nav>
