--- a/unit_9/contact.html
+++ b/unit_9/contact.html
@@ -20,8 +20,8 @@
 				</div>
 			</nav>
 		</header>
-
-		<div class="contact contact-page">
+		<div class="contact-us-page">
+		<div class="contact contact-form">
 			<h3>Let's get in touch!</h3>
 				<form  action="" method="">
 					<p><label>Name:</label>
@@ -32,7 +32,10 @@
 					<textarea name="message" cols="20" rows="4" placeholder="drop me a line"></textarea></p>
 					<div class="submit"><input class="submit" type="submit" name="contact-me" value="Contact Me" /></div>
 				</form>
-			</div>
-
+		</div>
+		<div class="contact-right">
+			Currently accepting new clients.
+		</div>
+		</div>
 	</body>
 </html>
