testing footer on contact page

--- a/unit_9/contact.html
+++ b/unit_9/contact.html
@@ -4,7 +4,7 @@
 		<title>Charlie Weber | Web Design</title>
 			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-			<link rel="shortcut icon" href="images/" type="image/png">
+			<link rel="shortcut icon" href="images/portfolio1favicon.png" type="image/png">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
@@ -20,6 +20,9 @@
 				</div>
 			</nav>
 		</header>
+		<div class="contact-header">
+			<h1>Contact Me</h1>
+		</div>
 		<div class="contact-us-page">
 		<div class="contact contact-form">
 			<h3>Let's get in touch!</h3>
@@ -34,8 +37,32 @@
 				</form>
 		</div>
 		<div class="contact-right">
-			Currently accepting new clients.
+			<h3>I'm currently accepting new projects and would love to chat!</h3>
+			<ul class="social-links">
+				<li>
+					<a href="https://twitter.com/charwebz" title="Follow me on Twitter" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a href="https://www.linkedin.com/in/webercharles/" title="Connect with me on LinkedIn" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+				</li>
+				<li>
+					<a href="mailto:weberscharles@gmail.com?subject=Web%20Design%20Inquiry" title="Send me an email"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
+				</li>
+			</ul>
 		</div>
 		</div>
+	<footer>
+		&copy; Charlie Weber 2017
+		<script>
+			function myFunction() {
+			    var x = document.getElementById("myDropdown");
+			    if (x.className === "dropdown") {
+			        x.className += " responsive";
+			    } else {
+			        x.className = "dropdown";
+			    }
+			}
+			</script>
+	</footer>
 	</body>
 </html>
