--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -39,7 +39,7 @@
 		</section>
 
 		<main class="main-content">
-			<section class="about-me clearfix" id="about">
+			<section class="clearfix" id="about">
 				<h3>About Me</h3>
 				<aside>
 					<img src="images/cw_webdesignhero.jpg" alt="Photo of Charlie Weber" title="Photo of Charlie Weber">
@@ -48,7 +48,7 @@
 					<p>I enjoy solving problems and helping others using creative approaches to reach their goals. I start each day with a cup of coffee and a puzzle. I'm based in Chicago and love collaborating with those around me.</p>
 				</article>
 			</section>
-			<div class="column-wrapper clearfix" id="portfolio">
+			<div class="clearfix" id="portfolio">
 				<h3>Portfolio</h3>
 				<section>
 					<h4>Design Project</h4>
@@ -81,7 +81,7 @@
 			<!-- <p>Let's get in touch! Contact me @ <a href="mailto:weberscharles@gmail.com?subject=Web%20Design%20Inquiry">weberscharles@gmail.com</a>.</p><br> -->
 			<div class="contact">
 			<h3>Let's get in touch!</h3>
-				<form  action="" method="">
+				<form action="" method="">
 					<p><label>Name:</label>
 					<input type="text" name="name" maxlength="50" placeholder="your first &amp; last name" /></p>
 					<p><label>Email:</label>
