added js file to pages

--- a/unit_9/contact.html
+++ b/unit_9/contact.html
@@ -5,6 +5,7 @@
 			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 			<link rel="shortcut icon" href="images/portfolio1favicon.png" type="image/png">
+			<script src="js/portfolio.js" type="text/javascript"></script>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
@@ -24,7 +25,7 @@
 			<h1>Contact Me</h1>
 		</div>
 		<div class="contact-us-page">
-		<div class="contact contact-form">
+		<section class="contact contact-form">
 			<h3>Let's get in touch!</h3>
 				<form  action="" method="">
 					<p><label>Name:</label>
@@ -35,8 +36,8 @@
 					<textarea name="message" cols="20" rows="4" placeholder="drop me a line"></textarea></p>
 					<div class="submit"><input class="submit" type="submit" name="contact-me" value="Contact Me" /></div>
 				</form>
-		</div>
-		<div class="contact-right">
+		</section>
+		<section class="contact-right">
 			<h3>I'm currently accepting new projects and would love to chat!</h3>
 			<ul class="social-links">
 				<li>
@@ -49,20 +50,10 @@
 					<a href="mailto:weberscharles@gmail.com?subject=Web%20Design%20Inquiry" title="Send me an email"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
 				</li>
 			</ul>
-		</div>
+		</section>
 		</div>
 	<footer>
-		&copy; Charlie Weber 2017
-		<script>
-			function myFunction() {
-			    var x = document.getElementById("myDropdown");
-			    if (x.className === "dropdown") {
-			        x.className += " responsive";
-			    } else {
-			        x.className = "dropdown";
-			    }
-			}
-			</script>
+		<p>&copy; Charlie Weber 2017</p>
 	</footer>
 	</body>
 </html>
