--- a/unit_9/blog.html
+++ b/unit_9/blog.html
@@ -5,6 +5,7 @@
 			<link rel="stylesheet" type="text/css" href="css/style.css">
 			<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 			<link rel="shortcut icon" href="images/" type="image/png">
+			<script src="js/portfolio.js" type="text/javascript"></script>
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
