--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 		<link rel="shortcut icon" href="images/portfolio1favicon.png" type="image/png">
+		<script src="js/portfolio.js" type="text/javascript"></script>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
@@ -92,16 +93,6 @@
 				</form>
 			</div>
 			<a href="#"><p>BACK TO TOP</p></a>
-			<script>
-			function myFunction() {
-			    var x = document.getElementById("myDropdown");
-			    if (x.className === "dropdown") {
-			        x.className += " responsive";
-			    } else {
-			        x.className = "dropdown";
-			    }
-			}
-			</script>
 		</footer>
 	</body>
 </html>
