updated media queries

--- a/unit_9/contact.html
+++ b/unit_9/contact.html
@@ -15,7 +15,7 @@
 					<a href="index.html">Home</a>
 					<a href="index.html#about">About</a>
 					<a href="index.html#portfolio">Portfolio</a>
-					<a href="blog.html">Blog</a>
+					<!-- <a href="blog.html">Blog</a> -->
 					<a href="contact.html">Contact</a>
 					<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
@@ -41,13 +41,13 @@
 			<h3>I'm currently accepting new projects and would love to chat!</h3>
 			<ul class="social-links">
 				<li>
-					<a href="https://twitter.com/charwebz" title="Follow me on Twitter" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a>
+					<a href="https://twitter.com/charwebz" title="Follow me on Twitter" target="_blank"><i class="fa fa-twitter fa-lg" aria-hidden="true"></i></a>
 				</li>
 				<li>
-					<a href="https://www.linkedin.com/in/webercharles/" title="Connect with me on LinkedIn" target="_blank"><i class="fa fa-linkedin fa-2x" aria-hidden="true"></i></a>
+					<a href="https://www.linkedin.com/in/webercharles/" title="Connect with me on LinkedIn" target="_blank"><i class="fa fa-linkedin fa-lg" aria-hidden="true"></i></a>
 				</li>
 				<li>
-					<a href="mailto:weberscharles@gmail.com?subject=Web%20Design%20Inquiry" title="Send me an email"><i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i></a>
+					<a href="mailto:weberscharles@gmail.com?subject=Web%20Design%20Inquiry" title="Send me an email"><i class="fa fa-envelope-o fa-lg" aria-hidden="true"></i></a>
 				</li>
 			</ul>
 		</section>
