--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -15,7 +15,7 @@
 					<a href="index.html">Home</a>
 					<a href="index.html#about">About</a>
 					<a href="index.html#portfolio">Portfolio</a>
-					<a href="blog.html">Blog</a>
+					<!-- <a href="blog.html">Blog</a> -->
 					<a href="contact.html">Contact</a>
 					<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 				</div>
