updated width of tables to 600px

--- a/unit_10/unit10email.html
+++ b/unit_10/unit10email.html
@@ -24,7 +24,7 @@
 	</style>
 </head>
 <body style="margin: 0;">
-	<table style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.5; border-left: 1px solid #ccc; border-right: 1px solid #ccc;" border="0" cellspacing="0" width="80%" align="center">
+	<table style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.5; border-left: 1px solid #ccc; border-right: 1px solid #ccc;" border="0" cellspacing="0" width="600px" align="center">
 		<tr>
 			<th style="font-size:2em;background-color:#133A65;color:#fdfdfb;padding:.5em;" colspan="2">Thanks for getting in touch!</th>
 		</tr>
@@ -32,7 +32,7 @@
 			<td width="40%" class="donut"><img src="http://www.slate.com/content/dam/slate/blogs/xx_factor/2014/doughnut.jpg.CROP.promo-mediumlarge.jpg" alt="photo of Charlie" width="100%"></td>
 			<td style="color:#133a65;font-size:1.25em;padding:2em;text-align: center;" width="60%">Hey! It's me, Charlie. Thanks for sending me a request earlier from my <a href="https://charsweber.github.io/unit_9/index.html" target="_blank" style="text-decoration: none;">website</a>. I'd love to chat and will be in touch shortly with any questions regarding your message. Talk to you soon!</td>
 		</tr>
-		<table style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.5; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc" border="0" cellspacing="0" width="80%" align="center">
+		<table style="font-family: Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.5; border-left: 1px solid #ccc; border-right: 1px solid #ccc; border-bottom: 1px solid #ccc" border="0" cellspacing="0" width="600px" align="center">
 			<tr>
 				<th style="font-size:1.2em;color:#133a65;padding:1em 2em; border: 2px solid #ff8800;" colspan="3">While I'm checking through your request and figuring out how we can take over the world, take a peek at what I've been working on.</th>
 			</tr>
