updating responsive width of html email

--- a/unit_9/index.html
+++ b/unit_9/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 		<link rel="shortcut icon" href="images/portfolio1favicon.png" type="image/png">
 		<script src="js/portfolio.js" type="text/javascript"></script>
+		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 	<body>
